# sap-scripts-generator

./: README.md  pyproject.toml
backend/: data_processor.py  main.py  script_generators.py
examples/: TEST_FILE_VR_201_221.xlsx  TEST_FILE_VR_201_221_.xlsx  TEST_FILE_VR_REQUEST_MOD.xlsx
frontend/: streamlit_app.py
